method UpdateRentCar added

--- a/src/rentcar.Web/appsettings.json
+++ b/src/rentcar.Web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=rentcarDb; Trusted_Connection=True;"
+    "Default": "Server=gustavo\\SQL; Database=rentcarDb; Trusted_Connection=True;"
   },
   "Authentication": {
     "Facebook": {
