--- a/src/rentcar.Application/project.json
+++ b/src/rentcar.Application/project.json
@@ -13,7 +13,8 @@
     "System.Collections.Immutable": "1.3.1",
     "Abp.AutoMapper": "1.4.1",
     "Abp.EntityFramework": "1.4.1",
-    "Abp.Zero": "1.4.0"
+    "Abp.Zero": "1.4.0",
+    "Microsoft.AspNet.WebApi.Core": "5.2.3"
   },
 
   "frameworks": {
