--- a/src/rentcar.Web/project.json
+++ b/src/rentcar.Web/project.json
@@ -37,7 +37,8 @@
     "Abp.RedisCache": "1.4.1",
     "Abp.Web.SignalR": "1.4.1",
     "Microsoft.AspNetCore.Mvc": "1.1.1",
-    "Swashbuckle": "6.0.0-beta902"  },
+    "Swashbuckle": "6.0.0-beta902",
+    "Microsoft.EntityFrameworkCore.Tools": "1.1.0"  },
 
   "tools": {
     "Microsoft.Extensions.SecretManager.Tools": "1.1.0-preview4-final",
